--- a/app/templates/lighting_types/airport_lighting.html
+++ b/app/templates/lighting_types/airport_lighting.html
@@ -5,7 +5,7 @@
 
 
 <div class="wrapper product-line"> 
-    <h1>Airport Lighting</h1>
+    <div class="mt80 mb40"><h1>Airport Lighting</h1></div>
     <div class="cols mb100">
         
         <a href="{{ url_for('model_630_solar') }}">
