--- a/app/templates/lighting_types/highway_construction_lighting.html
+++ b/app/templates/lighting_types/highway_construction_lighting.html
@@ -7,7 +7,7 @@
 
 
 <div class="wrapper product-line"> 
-    <h1>Highway Lights and Audible Devices</h1>
+    <div class="mt80 mb40"><h1>Highway Lights and Audible Devices</h1></div>
     <div class="cols mb100">
 
 
@@ -181,7 +181,7 @@
 
 
 
-        <h1>Lighting Reflectors, Portable Speed Bump, & Mounting Brackets</h1>
+            <div class="mt80 mb40"><h1>Lighting Reflectors, Portable Speed Bump, & Mounting Brackets</h1></div>
 
 
         <!-- EBMT -->
@@ -350,7 +350,7 @@
         
 
 
-        <h1>Delineators, Barrier Wall Markers, and Traffic Signal Lenses</h1>
+            <div class="mt80 mb40"><h1>Delineators, Barrier Wall Markers, and Traffic Signal Lenses</h1></div>
 
               <div class="product-col" ontouchstart="this.classList.toggle('hover');">
                 <a href="{{ url_for('traffic_signal_lenses') }}">
@@ -526,6 +526,6 @@
    </div>
 
 
-   model2006plus_solar_assist
+  
 
 {% endblock content %}
