--- a/app/templates/sister_companies.html
+++ b/app/templates/sister_companies.html
@@ -3,24 +3,63 @@
 
 {% block content %}
 
+<div class="big-image-divisions">
+    <div class="overlay">
+      <h1>Our Divisions</h1>
+    </div>
+</div> 
 
-    <div class="about-container grad-primary pinside30 mb20 text--center">
-    <h3 class="">Our Divisions</h3>
-    <p class="subheading">Expertise, Technology, Quality ... since 1949</p></div>
 <section class=" neutral-primary">
-    <p class='pdl80 pdr80' > It all started with a few hard-working people with a vision, working in a small, garage-like, 750 square-foot structure. In 1949, Elgin Molded Plastics was born. Their goal was to produce the highest quality products on time, each an everytime. Dedication to excellence led to success, especially in the lighting industry. Empco-Lite was founded in 1968, making airline, construction, railroad, and marine lighting products available to customers. Once again, dedication to excellence led to success, and there was a need to create a company soley focused on highway/construction lighting. In 1978, AKT Construction was formed.</p>
-    <p class='pdl80 pdr80'>We believe in continuous improvement. We have been industry leaders for over 75 years because we have evolved with the times. We are very proud to be a woman-owned business. We also attribute our success to a dedication of excellence that our founders had. All of our products are made in America, right in our plant. We are a family-owned business, and believe that all of our customers should be treated like family too. </p>
+    <h1 class='pdl80 pdr80'>Our Story</h1>
+    <p class='pdl80 pdr80' > It all started with a few very determined people, working in garage-like, 750 square-foot structure. Their vision? They wanted to produce the highest quality products on time, each an everytime. They formed Elgin Molded Plastics in 1949, and very quickly was considered a leader in custom injection molding. Dedication to excellence led to success, and the business thrived for many years. In the 1960's, Elgin Molded decided to expand into the manufacturing industry. The leaders at Elgin Molded decided to fill a hole in the lighting industry, and started Empco-Lite, which focused soley on manufacturing lighting products. More specifically, they wanted to focus on producing and manufacturing high-quality highway, airport, marine, and railroad lighting products.  A similar pattern emerged in the 70's, where once again there was a need to fill a hole, this time in the construction industry. So in 1978, AKT Corporation was formed with the purpose of manufacturing delineators, guardrail delineators, barrier wall markers and traffic signal lenses. 
+    <p class='pdl80 pdr80'>Today, we are proud to be industry leaders in multiple different industries. All of our Empco-Lite and AKT Corporation products are molded through Elgin Molded Plastics (EMP). We have been industry leaders for over 75 years because we have evolved with the times, but we have also stayed true to our roots. We attribute our current success to the same dedication of excellence that our founders had. All of our products are made in America, right in our Elgin Molded Facility. We are a family-owned business, a woman-owned business, and we are forever proud of the work we do here. </p>
 </section>
+
+
+<div class="image-effect-container flex-row">
+        <div class="image-effect-wrapper">
+            <div class="box w-content">
+            <img src="https://source.unsplash.com/900x900/?dark
+        " alt="Jenny of Oldstones">
+            <div class="frame">
+                <h2>Expertise, Technology, and Quality</h2>
+            </div>
+            </div>
+        </div>
+
+        <div class="image-effect-wrapper">
+            <div class="box w-content">
+            <img src="https://source.unsplash.com/900x900/?business
+        " alt="Jenny of Oldstones">
+            <div class="frame">
+                <h2>Industry Leaders</h2>
+            </div>
+            </div>
+        </div>
+
+        <div class="image-effect-wrapper">
+            <div class="box w-content">
+            <img src="https://source.unsplash.com/900x900/?solid
+        " alt="Jenny of Oldstones">
+            <div class="frame">
+                <h2>Since 1949</h2>
+            </div>
+            </div>
+        </div>
+</div>
+
+
+
 
 <section class="about">
     <div class="about-container">
     <div class="col-3 text--center">
-        <img src="/static/1.jpg" alt="" class="details-img--ball"/>
+        <img src="/static/akt/_567_guardrail_delineator_/AKT567GuardrailDelineator2.jpg" alt="" class="details-img--ball"/>
     </div>
     <div class="col-7 details">
         <h3 class="">AKT Corporation</h3>
         <p>AKT Corporation was formed in 1978, as a manufacturer and supplier of 3" delineators, guardrail delineators, barrier wall markers and traffic signal lenses.</p>
-        <a href="{{ url_for('akt') }}" class="btn">Learn More</a>
+        <a href="{{ url_for('index') }}" class="btn">Home Page</a>
     </div>
     </div>
 </section>
@@ -28,12 +67,12 @@
 <section class="about">
     <div class="about-container">
     <div class="col-3 text--center">
-        <img src="/static/1.jpg" alt="" class="details-img--ball"/>
+        <img src="/static/Model2006SolarAssist(1).jpg" alt="" class="details-img--ball"/>
     </div>
     <div class="col-7 details">
         <h3>Empco-Lite</h3>
-        <p>Empco-Lite has been involved in the traffic safety industry since the 1968. Dedication to excellence led to success, especially in the lighting industry. Empco-Lite was founded in 1968, making airline, construction, railroad, and marine lighting products available to customers. </p>
-            <a href="{{ url_for('index') }}" class="btn">Home</a>
+        <p>Empco-Lite was founded in 1968, making airline, construction, railroad, and marine lighting products available to customers. </p>
+            <a href="{{ url_for('index') }}" class="btn">Learn More</a>
     </div>
     </div>
 </section>
@@ -41,7 +80,7 @@
 <section class="about">
     <div class="about-container">
     <div class="col-3 text--center">
-        <img src="/static/1.jpg" alt="" class="details-img--ball"/>
+        <img src="/static/Model2006SolarAssist(1).jpg" alt="" class="details-img--ball"/>
     </div>
     <div class="col-7 details">
         <h3>Elgin Molded</h3>
@@ -50,14 +89,6 @@
     </div>
     </div>
 </section>
-
-
-
-
-
-
-
-
 
 
 
