--- a/app/templates/lighting_types/railroad_lighting.html
+++ b/app/templates/lighting_types/railroad_lighting.html
@@ -5,7 +5,7 @@
 
 
 <div class="wrapper product-line"> 
-    <h1>Railroad Lighting</h1>
+    <div class="mt80 mb40">Railroad Lighting</h1></div>
     <div class="cols mb100">
         
         <div class="product-col" ontouchstart="this.classList.toggle('hover');">
